--- a/app/src/main/res/layout/activity_shipment_list.xml
+++ b/app/src/main/res/layout/activity_shipment_list.xml
@@ -28,6 +28,11 @@
         app:tabTextColor="@color/tab_unselected_text_color"
         app:textAllCaps="false" />
 
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -174,5 +179,7 @@
             tools:visibility="visible" />
 
     </RelativeLayout>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
